Code cleanup, start expanding README, future planning for potential changes to NBT schema and data versioning, start unit test scaffold